--- a/app.json
+++ b/app.json
@@ -1,15 +1,13 @@
 {
   "expo": {
-    "name": "Movie_App",
-    "slug": "Movie_App",
+    "name": "Seatify",
+    "slug": "seatify",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
-    "userInterfaceStyle": "automatic",
-    "newArchEnabled": false,
-    "ios": {
-      "supportsTablet": true
+    "splash": {
+      "image": "./asset/images/splashScreen.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#000000"
     },
     "android": {
       "adaptiveIcon": {
@@ -39,4 +37,7 @@
     }
 
   }
+
+  
+
 }
